Upgrade project to build and run on Java 17
Co-Authored-By: Nate Kanat <nate.kanat@gmail.com>